testcases/semantic/valid/array3.rs
fn main() {
    let mut flags: [bool; 5] = [false; 5];
    flags[2] = true;
    exit(0);
}
