testcases/semantic/invalid/array4.rs
fn main() {
    let flags: [bool; 5] = [false; 5];
    flags[2] = true;
    exit(0);
}
